appId: com.example.example
tags:
  - passing
  - android
---
- launchApp # For idempotence of sections

- tapOn: 'Form Test'
- assertVisible: 'Login'
- back
- assertVisible: 'Form Test'