appId: com.example.example
tags:
  - passing
---
- launchApp # For idempotence of sections

- tapOn: 'Form Test'
- tapOn: 'Email'
- inputText: 'foo'
- assertVisible: 'foo'
- eraseText
# Fix me this part is flaky on CI only not local, needs to be addressed why
- assertNotVisible:
    text: 'foo'
    optional: true

- inputText: 'testing'
- assertVisible:
    text: 'testing'
    above: 'Login'
- eraseText: 3
- assertNotVisible:
    text: 'testing'
    above: 'Login' # In case there's a keyboard suggestion
- assertVisible:
    text: 'test'
    above: 'Login'