appId: com.example.example
tags:
  - passing
---
- launchApp # For idempotence of sections

- tapOn: 'Input/Keyboard'
- tapOn:
    id: 'textInput'
- inputRandomPersonName
- assertVisible: 
    text: "[A-Z][a-z]+ [A-Z][A-Za-z']+"
    id: 'textInput'