appId: com.example.example
tags:
  - passing
---
- launchApp # For idempotence of sections

- tapOn: 'Input/Keyboard'
- tapOn:
    id: 'textInput'
- inputRandomText
- assertVisible:
    text: '[a-z0-9]{8}' # The default length is 8
    id: 'textInput'

- eraseText
- inputRandomText:
    length: 4
- assertVisible:
    text: '[a-z0-9]{4}'
    id: 'textInput'
