appId: com.example.example
name: Issue 1706 
---
- launchApp:
    clearState: true
- addMedia:
  - ../assets_in_root/image.png
- launchApp: com.google.android.documentsui
- tapOn: Show roots
- tapOn: Images
- tapOn: Pictures
- assertVisible: image.png
- longPressOn: image.png
- tapOn: Search # wtf?
- tapOn: OK
- assertNotVisible: image.png
