appId: com.example.example
name: Issue 565 (tap on FAB)
---
- launchApp:
    clearState: false
- tapOn:
    id: fabAddIcon
- tapOn:
    id: fabAddIcon
- assertVisible: 2
