appId: com.example.example
name: Issue 1706 
---
- launchApp:
    clearState: true
- addMedia:
  - assets/image.png
- launchApp: com.android.documentsui
  # "com.android.documentsui" for API 29 and below
  # "com.google.android.documentsui" for API 30 and above
- tapOn: Show roots
- tapOn: Images
- tapOn: Pictures
- assertVisible: image.png
- longPressOn: image.png
- tapOn: Search # wtf?
- tapOn: OK
- assertNotVisible: image.png
